--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "vue-cli-service serve"
+    "start": "vue-cli-service serve",
+    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
     "element-plus": "^1.0.2-beta.28",
@@ -38,6 +39,8 @@
     "lint-staged": "^11.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "svg-sprite-loader": "^6.0.6",
+    "svgo": "^1.3.2",
     "typescript": "~4.1.5",
     "vue-cli-plugin-element-plus": "0.0.13"
   },
